--- a/package.json
+++ b/package.json
@@ -28,24 +28,32 @@
     "postinstall": "jetifier -r"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.21.1",
+    "create-react-class": "^15.7.0",
     "moment": "^2.29.1",
+    "native-base": "2.7.2",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-navigation-bar-color": "^2.0.1",
+    "react-native-paper": "^4.9.2",
     "react-native-popup-menu": "^0.15.9",
     "react-native-reanimated": "^1.13.2",
+    "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^8.1.0",
+    "react-timer-mixin": "^0.13.4",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
