--- a/package.json
+++ b/package.json
@@ -30,17 +30,20 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-mapbox-gl/maps": "^8.2.1",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
     "create-react-class": "^15.7.0",
+    "jwt-decode": "^3.1.2",
+    "@mapbox/mapbox-sdk": "^0.6.0",
     "moment": "^2.29.1",
     "native-base": "2.7.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-native": "0.63.3",
+    "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-paper": "^4.9.2",
@@ -53,7 +56,13 @@
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
     "react-timer-mixin": "^0.13.4",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
