--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,19 +2,20 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "29.0.3"
-        minSdkVersion = 21
-        compileSdkVersion = 29
-        targetSdkVersion = 29
-        ndkVersion = "20.1.5948944"
+     buildToolsVersion = "28.0.3"
+           minSdkVersion = 21
+           compileSdkVersion = 28
+           targetSdkVersion = 28
+   	    supportLibVersion = "28.0.0"
+           googlePlayServicesAuthVersion = "16.0.1"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.1.0")
-         classpath("com.google.gms:google-services:4.1.0")
+      classpath("com.android.tools.build:gradle:3.4.2")
+      classpath("com.google.gms:google-services:4.1.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
