--- a/package.json
+++ b/package.json
@@ -28,22 +28,32 @@
     "postinstall": "jetifier -r"
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.6.0",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-mapbox-gl/maps": "^8.2.1",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@turf/helpers": "^6.5.0",
     "axios": "^0.21.1",
     "create-react-class": "^15.7.0",
+    "galio-framework": "^0.6.3",
     "jwt-decode": "^3.1.2",
-    "@mapbox/mapbox-sdk": "^0.6.0",
+    "mapbox": "^1.0.0-beta9",
+    "mapbox-gl": "^2.3.1",
+    "react-native-mapbox-direction": "^1.0.0",
+    "@mapbox/mapbox-gl-directions": "^4.1.0",
+    "@mapbox/polyline": "^1.1.1",
     "moment": "^2.29.1",
     "native-base": "2.7.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "^0.63.4",
+    "react-native-android-permissions": "^1.0.2",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-paper": "^4.9.2",
@@ -63,7 +73,8 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "turf-point": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -76,6 +87,39 @@
     "react-test-renderer": "17.0.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "testMatch": [
+      "<rootDir>/Tests/**/*.js",
+      "**/?(*.)(spec|test).js?(x)"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/Tests/Setup.js"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    },
+    "setupFiles": [
+      "<rootDir>/Tests/Setup"
+    ]
+  },
+  "config": {},
+  "standard": {
+    "parser": "babel-eslint",
+    "globals": [
+      "describe",
+      "test",
+      "jest",
+      "expect",
+      "fetch",
+      "navigator",
+      "__DEV__",
+      "XMLHttpRequest",
+      "FormData",
+      "React$Element"
+    ]
   }
 }
