app chauffeur added

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "postinstall": "jetifier -r"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.0",
     "@mapbox/mapbox-sdk": "^0.6.0",
+    "@mapbox/polyline": "^1.1.1",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
@@ -44,17 +46,16 @@
     "jwt-decode": "^3.1.2",
     "mapbox": "^1.0.0-beta9",
     "mapbox-gl": "^2.3.1",
-    "react-native-mapbox-direction": "^1.0.0",
-    "@mapbox/mapbox-gl-directions": "^4.1.0",
-    "@mapbox/polyline": "^1.1.1",
     "moment": "^2.29.1",
     "native-base": "2.7.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "^0.63.4",
     "react-native-android-permissions": "^1.0.2",
+    "react-native-calendar-events": "^2.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-mapbox-direction": "^1.0.0",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-paper": "^4.9.2",
     "react-native-popup-menu": "^0.15.9",
@@ -66,6 +67,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^8.1.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.4",
     "react-timer-mixin": "^0.13.4",
     "redux": "^4.1.0",
@@ -77,14 +79,41 @@
     "turf-point": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/runtime": "^7.14.8",
-    "@react-native-community/eslint-config": "^3.0.0",
-    "babel-jest": "^27.0.6",
-    "eslint": "^7.32.0",
-    "jest": "^27.0.6",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.1"
+    "@babel/core": "^7.7.2",
+    "@babel/runtime": "^7.7.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@storybook/addon-actions": "5.0.11",
+    "@storybook/addon-links": "5.0.11",
+    "@storybook/addon-storyshots": "^4.1.11",
+    "@storybook/addons": "^4.1.11",
+    "@storybook/channels": "^4.1.11",
+    "@storybook/react-native": "^4.1.11",
+    "@turf/distance": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
+    "babel-eslint": "7.1.1",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "i18n-js": "^3.3.0",
+    "ignite-andross": "^4.2.0",
+    "ignite-dev-screens": "2.4.5",
+    "ignite-maps": "^1.0.1",
+    "ignite-redux-persist": "1.1.2",
+    "ignite-standard": "1.0.0",
+    "ignite-vector-icons": "1.1.1",
+    "jest": "^24.9.0",
+    "moment-timezone": "^0.5.33",
+    "nominatim-browser": "^2.1.0",
+    "react-native-events-calendar": "^1.0.8",
+    "react-native-i18n": "^2.0.15",
+    "react-native-localize": "^2.1.1",
+    "react-test-renderer": "16.9.0",
+    "reactotron-react-native": "^4.0.2",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.2",
+    "snazzy": "^8.0.0",
+    "socket.io-client": "^2.1.1",
+    "standard": "10.0.2"
   },
   "jest": {
     "preset": "react-native",
